# GloriousFlywheel

./: .bazelignore  .bazelrc  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .lychee.toml  .markdownlint-cli2.yaml  .npmrc  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Justfile  MODULE.bazel  README.md  cliff.toml  flake.nix  package.json  pnpm-lock.yaml
.github/workflows/: build-image.yml  (+4 more)
app/: .dockerignore  BUILD.bazel  Dockerfile  package.json  run-vitest.mjs  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
app/caddy/: Dockerfile
app/scripts/: generate-environments.ts
app/src/: app.css  app.d.ts  app.html  hooks.server.ts
app/src/lib/client/: sse.ts
app/src/lib/components/: index.ts
app/src/lib/components/auth/: PasskeyManager.svelte
app/src/lib/components/charts/: BarChart.svelte  TimeSeriesChart.svelte
app/src/lib/components/common/: DataTable.svelte  ErrorBanner.svelte  LiveIndicator.svelte  LoadingSpinner.svelte  StatusDot.svelte
app/src/lib/components/forms/: HPAConfigForm.svelte  ResourceInput.svelte  RunnerConfigForm.svelte  TagInput.svelte
app/src/lib/components/gitops/: DiffViewer.svelte  DriftPanel.svelte  PipelineStatus.svelte
app/src/lib/components/metrics/: HPAGauge.svelte  MetricCard.svelte
app/src/lib/components/nav/: Breadcrumb.svelte  EnvBadge.svelte  Sidebar.svelte
app/src/lib/components/runner/: RunnerCard.svelte  RunnerStatusIndicator.svelte  RunnerTagList.svelte  RunnerTypeBadge.svelte
app/src/lib/config/: app-config.json  environments.json
app/src/lib/mocks/: index.ts  metrics.ts  runners.ts
app/src/lib/server/: cache.test.ts  cache.ts  config.ts
app/src/lib/server/auth/: gitlab-oauth.ts  session.ts  webauthn-store.ts  webauthn.ts
app/src/lib/server/db/: client.ts  migrate.ts
app/src/lib/server/gitlab/: client.ts  pipelines.ts  runners.ts  transform.ts
app/src/lib/server/gitlab/__tests__/: client.test.ts
app/src/lib/server/gitops/: config.ts  diff.ts  drift.ts  pipeline.ts  repository.ts  tfvars-parser.ts
app/src/lib/server/gitops/__tests__/: diff.test.ts  drift.test.ts  pipeline.test.ts  repository.test.ts  tfvars-parser.test.ts
app/src/lib/server/k8s/: client.ts  types.ts
app/src/lib/server/k8s/__tests__/: client.test.ts
app/src/lib/server/prometheus/: client.ts  queries.ts  transform.ts
app/src/lib/server/prometheus/__tests__/: queries.test.ts  transform.test.ts
app/src/lib/stores/: environment.svelte.ts  environment.ts  index.ts  notifications.ts  runners.svelte.ts  runners.ts
app/src/lib/types/: enrollment.ts  environment.ts  gitops.ts  index.ts  metrics.ts  runner.ts
app/src/lib/validation/: runner.ts
app/src/lib/validation/__tests__/: runner.test.ts
app/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
app/src/routes/api/events/stream/: +server.ts
app/src/routes/api/gitops/config/: +server.ts
app/src/routes/api/gitops/drift/: +server.ts
app/src/routes/api/health/: +server.ts
app/src/routes/api/k8s/hpa/: +server.ts
app/src/routes/api/metrics/: +server.ts
app/src/routes/api/metrics/[name]/: +server.ts
app/src/routes/api/runners/: +server.ts
app/src/routes/api/runners/[name]/: +server.ts
app/src/routes/api/runners/[name]/pause/: +server.ts
app/src/routes/api/runners/[name]/resume/: +server.ts
app/src/routes/auth/callback/: +server.ts
app/src/routes/auth/logged-out/: +page.svelte
app/src/routes/auth/login/: +page.svelte  +server.ts
app/src/routes/auth/logout/: +server.ts
app/src/routes/auth/webauthn/authenticate/: +server.ts
app/src/routes/auth/webauthn/credentials/: +server.ts
app/src/routes/auth/webauthn/register/: +server.ts
app/src/routes/gitops/: +page.server.ts  +page.svelte
app/src/routes/gitops/changes/: +page.svelte
app/src/routes/gitops/pipelines/: +page.svelte
app/src/routes/monitoring/: +page.server.ts  +page.svelte
app/src/routes/monitoring/[name]/: +page.server.ts  +page.svelte
app/src/routes/runners/: +page.server.ts  +page.svelte
app/src/routes/runners/[name]/: +page.server.ts  +page.svelte
app/src/routes/settings/: +page.svelte
ci/: images.yml  mirror-images.sh
ci-templates/: bates-ils-runners.gitlab-ci.yml  runners.gitlab-ci.yml
config/: organization.example.yaml
docs/: bates-fork-workflow.md  getting-started-guide.md  index.md
docs-site/: .gitignore  mdsvex.config.js
scripts/: cache-warm.sh  check-links.js  health-check.sh  init-cache.sh  runner-health-check.sh  test-abstraction.sh  validate-org-config.sh
tests/: BUILD.bazel  config_validation.sh
tests/integration/: enrollment-flow.sh
tests/load/: hpa-load-test.sh
tests/security/: isolation-audit.sh
tofu/modules/: BUILD.bazel
tofu/modules/arc-controller/: locals.tf  main.tf  outputs.tf  variables.tf
tofu/modules/arc-runner/: locals.tf  main.tf  outputs.tf  variables.tf
tofu/modules/bazel-cache/: main.tf  variables.tf
tofu/modules/gitlab-agent-rbac/: main.tf
tofu/modules/gitlab-runner/: enrollment-alerts.tf  hpa.tf  locals.tf  main.tf  monitoring.tf  outputs.tf  recording-rules.tf  variables.tf
tofu/modules/hpa-deployment/: main.tf  variables.tf
tofu/modules/minio-tenant/: lifecycle.tf
tofu/modules/postgresql-cnpg/: main.tf  outputs.tf
tofu/modules/runner-cleanup/: main.tf  variables.tf
tofu/modules/runner-dashboard/: main.tf  outputs.tf  rbac.tf  variables.tf
tofu/modules/runner-dashboard/templates/: Caddyfile.tpl
tofu/modules/runner-security/: outputs.tf  priority-classes.tf  variables.tf
tofu/stacks/: BUILD.bazel
tofu/stacks/arc-runners/: BUILD.bazel  backend.tf  main.tf  outputs.tf  variables.tf
tofu/stacks/attic/: Justfile  beehive.tfvars  main.tf  rigel.tfvars  terraform.tfvars.example  variables.tf
tofu/stacks/bates-ils-runners/: Justfile  backend.tf  beehive.tfvars  main.tf  outputs.tf  rigel.tfvars  variables.tf
tofu/stacks/gitlab-runners/: Justfile  backend.tf  beehive.tfvars  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tofu/stacks/runner-dashboard/: Justfile  backend.tf  beehive.tfvars  main.tf  terraform.tfvars.example  variables.tf
(+66 files in other folders)
