# Attic Cache - Root BUILD file

load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Package visibility
package(default_visibility = ["//visibility:public"])

# Export files needed by sub-packages
exports_files([
    "flake.nix",
    "flake.lock",
    ".npmrc",
])

# Filegroup for all Kubernetes manifests
filegroup(
    name = "k8s_manifests",
    srcs = glob(["k8s/**/*.yaml"]),
)

# Filegroup for Nix configuration
filegroup(
    name = "nix_files",
    srcs = [
        "flake.lock",
        "flake.nix",
    ] + glob(["nix/**/*.nix"]),
)

# Filegroup for GitLab CI configuration
filegroup(
    name = "gitlab_ci",
    srcs = glob([
        ".gitlab-ci.yml",
        ".gitlab/ci/**/*.yml",
    ]),
)

# Filegroup for OpenTofu configuration
filegroup(
    name = "tofu_files",
    srcs = glob(["tofu/**"]),
)

# Filegroup for CI/CD component templates
filegroup(
    name = "ci_components",
    srcs = glob(["templates/**/*.yml"]),
)

# Package all deployment artifacts
pkg_tar(
    name = "deployment_bundle",
    srcs = [
        ":gitlab_ci",
        ":k8s_manifests",
        ":nix_files",
    ],
    extension = "tar.gz",
    strip_prefix = ".",
)

# Alias for easy reference
alias(
    name = "all",
    actual = ":deployment_bundle",
)

# Runner Dashboard app alias
alias(
    name = "app",
    actual = "//app:build",
)
