# Attic IaC - Root BUILD file

load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Package visibility
package(default_visibility = ["//visibility:public"])

# Link npm packages at root (required for transitive dep resolution)
npm_link_all_packages(name = "node_modules")

# Export files needed by sub-packages and downstream modules
exports_files([
    "MODULE.bazel",
    "flake.nix",
    "flake.lock",
])

# Filegroup for all Kubernetes manifests
filegroup(
    name = "k8s_manifests",
    srcs = glob(["k8s/**/*.yaml"]),
)

# Filegroup for Nix configuration
filegroup(
    name = "nix_files",
    srcs = [
        "flake.lock",
        "flake.nix",
    ] + glob(["nix/**/*.nix"]),
)

# Filegroup for OpenTofu configuration
filegroup(
    name = "tofu_files",
    srcs = glob(["tofu/**"]),
)

# Package all deployment artifacts
pkg_tar(
    name = "deployment_bundle",
    srcs = [
        ":k8s_manifests",
        ":nix_files",
    ],
    extension = "tar.gz",
    strip_prefix = ".",
)

# Alias for easy reference
alias(
    name = "all",
    actual = ":deployment_bundle",
)

