load("@aspect_rules_js//js:defs.bzl", "js_run_binary", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_img//img:defs.bzl", "image_layer", "image_manifest", "image_push")

# Link all npm packages into this workspace
npm_link_all_packages(name = "node_modules")

# Source filegroup for cache invalidation
filegroup(
    name = "srcs",
    srcs = glob(
        ["src/**"],
        exclude = ["src/**/*.test.ts"],
    ) + [
        "package.json",
        "svelte.config.js",
        "tsconfig.json",
        "vite.config.ts",
    ],
)

# Production build via Vite
js_run_binary(
    name = "build",
    srcs = [
        ":node_modules",
        ":srcs",
        "//:.npmrc",
    ],
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["build"],
    tool = ":node_modules/vite/bin/vite.js",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Container Image (OCI via rules_img)
# =============================================================================

# App layer: built SvelteKit output
image_layer(
    name = "app_layer",
    srcs = {
        "/app/build": ":build",
        "/app/package.json": "package.json",
    },
)

# Production image
image_manifest(
    name = "image",
    base = "@node22_alpine",
    layers = [":app_layer"],
    entrypoint = ["/usr/local/bin/node"],
    cmd = ["/app/build/index.js"],
    env = {
        "NODE_ENV": "production",
        "PORT": "3000",
    },
    ports = ["3000/tcp"],
    workdir = "/app",
    user = "1000",
    labels = {
        "org.opencontainers.image.source": "https://github.com/Jesssullivan/attic-iac",
    },
)

# Push to GHCR (run with: bazel run //app:push)
image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "jesssullivan/runner-dashboard",
    tag = "latest",
)

# =============================================================================
# Development
# =============================================================================

# Development server
js_run_devserver(
    name = "dev",
    args = ["dev"],
    chdir = package_name(),
    data = [
        ":node_modules",
        ":srcs",
    ],
    tool = ":node_modules/vite/bin/vite.js",
)
